Rename task master to faction representative

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -161,7 +161,7 @@
   "text.vampirism.crossbow.loaded_arrow_count": "Loaded %s arrows",
   "text.vampirism.blood.poisonous": "Poisonous blood",
   "text.vampirism.task.reward": "Task reward",
-  "text.vampirism.task.reward_obtain": "Can be obtained as a task reward from a %stask master",
+  "text.vampirism.task.reward_obtain": "Can be obtained as a task reward from a %s",
   "text.vampirism.task.require_parent": "Complete parent (%s)",
   "text.vampirism.task.prerequisites": "Prerequisites",
   "text.vampirism.task.prerequisites.none": "None",
@@ -695,8 +695,8 @@
   "command.vampirism.base.vampire_biome.parse_dist": "Failed to parse max distance. Using %s.",
   "__comment": "entities",
   "entity.vampirism.vampire_baron": "Vampire Baron",
-  "entity.vampirism.task_master_hunter": "Hunter Task Master",
-  "entity.vampirism.task_master_vampire": "Vampire Task Master",
+  "entity.vampirism.task_master_hunter": "Hunter representative",
+  "entity.vampirism.task_master_vampire": "Vampire representative",
   "__comment": "entities_text",
   "entity.vampirism.vampire_baron.level": " Level %s",
   "__comment": "old",
