Minion cleanup - Change attack damage source to direct - Make sure they don't despawn - Fix some task lang keys Taskmaster - Reduce max task count to 3

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -728,8 +728,8 @@
   "minioncommand.vampirism.attackhostilenoplayers": "Attack hostile",
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
   "minioncommand.vampirism.collectblood": "Collect blood",
-  "minioncommand.vampirism.defendlord": "Defend lord",
-  "minioncommand.vampirism.nothing": "Nothing",
+  "minion_task.vampirism.protect_lord": "Defend lord",
+  "minion_task.vampirism.nothing": "Nothing",
   "minion_task.vampirism.stay": "Stay here",
   "minion_task.vampirism.follow_lord": "Follow",
   "minion_task.vampirism.defend_area": "Defend area",
@@ -737,7 +737,6 @@
   "minion_task.vampirism.collect_hunter_items.start": "I will head out and search for resources",
   "minion_task.vampirism.collect_blood": "Collect blood",
   "minion_task.vampirism.collect_blood.start": "I will head out and gather blood for you, Sire.",
-  "minioncommand.vampirism.none": "None",
   "text.vampirism.minion.can_respawn": "My lord, I have recovered (%s)",
   "text.vampirism.minion.died": "My lord, I have died (%s)",
   "text.vampirism.name": "Name: ",
