--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -456,6 +456,7 @@
   "text.vampirism.hunter_trainer.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
   "__comment": "biome",
   "biome.vampirism.vampire_forest": "Vampire Forest",
+  "biome.vampirism.vampire_forest_hills": "Vampire Forest Hills",
   "__comment": "text",
   "text.vampirism.update_message.download": "Download",
   "text.vampirism.update_message.changelog": "Changelog",
@@ -499,6 +500,10 @@
   "block.vampirism.castle_slab_dark_stone": "Dark Stone Slab",
   "block.vampirism.coffin": "Coffin",
   "block.vampirism.potion_table": "Potion table",
+  "block.vampirism.bloody_spruce_log": "Bloody Spruce Log",
+  "block.vampirism.vampire_spruce_leaves": "Vampire Spruce Leaves",
+  "block.vampirism.bloody_spruce_leaves": "Bloody Spruce Leaves",
+  "block.vampirism.bloody_spruce_sapling": "Bloody Spruce Sapling",
   "__comment": "blocks_old",
   "block.vampirism.tent": "Tent",
   "block.vampirism.med_chair": "Injection Chair",
