[1.14] lets Totems cosider all villages as village and not only generated ones (#753)
* transform Totems from structurebased to PointofInterest based

* move static TotemTileEntity stuff into TotemHelper

* move static methods and modify them

* fix tileentity rendering

* max village radius, fix capture command

* cleanup and is Village check

* prevent village destruction, adjust values

* inform player about missing components on shift click

* adds javadoc for all new methods and some old

* fix minion names are out of sync

* enable HalloweenSpecial

* add GuideBook hook

fix Halloween date

* remove ghosts

* remove all ghost related fields/classes and remap

* update undercover trainer to new texture

* fix missing structure id error

* Fix DataParameter and leftover log

* Allow using lower level intel/pure blood for rituals and downgrading pure blood using vampire blood

* Make vampire player not require any rest

* bigger capture command radius

* add warning suppression and fix advanced hunter error

* reset totem top on no village found

* Add chunk loaded check

* add more totem feedback for player

* Add separate totem top variant that can be obtained from a task

* show missing components on right click instead of shift right

* auto accept totems in villages as village & backwards compat

* add comment to BlockEvent.BreakEvent

Co-authored-by: maxanier <dev@maxgb.de>

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -116,6 +116,7 @@
   "text.vampirism.village.totem_destroy.fail_other_capturing": "Cannot destroy totem while another faction is capturing it",
   "text.vampirism.village.totem_destroy.fail_capture_in_progress": "Cannot destroy totem while someone is capturing it",
   "text.vampirism.village.totem_destroy.fail_other_faction": "Cannot destroy a totem of another faction",
+  "text.vampirism.village.totem_destroy.fail_totem_faction": "Cannot destroy village component of another faction's village",
   "text.vampirism.village.village_captured_by": "A nearby village has been captured by %s",
   "text.vampirism.village.village_capture_aborted": "The attack on a nearby village has been aborted",
   "text.vampirism.village.neutral_village_under_attack": "A nearby neutral village is under attack from %s",
@@ -123,6 +124,7 @@
   "text.vampirism.village.almost_captured": "Village almost captured. %s defenders left",
   "text.vampirism.village.bossinfo.capture": "Village capturing progress",
   "text.vampirism.village.defender_remaining": "Defender remaining",
+  "text.vampirism.village.village_abandoned": "A nearby village has been abandoned",
   "text.vampirism.hunter_villager.trade_successful": "Thank you for hunting down those vampires",
   "text.vampirism.hunter_villager.decline_trade_vampire": "I do not trade with wicked vampires",
   "text.vampirism.hunter_villager.decline_trade_normal": "Sorry, but my trades are only interesting for vampire hunters",
@@ -415,7 +417,10 @@
   "text.vampirism.village.no_faction": "You have to be in a faction",
   "text.vampirism.village.capturing_in_progress": "There is already a capture in progress",
   "text.vampirism.village.same_faction": "You can not attack a village owned by your faction",
-  "text.vampirism.village.no_near_village": "No village nearby",
+  "text.vampirism.village.missing_components": "No nearby village or Village is too small:",
+  "text.vampirism.village.missing_components.home": "Missing Homes",
+  "text.vampirism.village.missing_components.workstations": "Missing Workplaces",
+  "text.vampirism.village.missing_components.villager": "Missing Villager",
   "text.vampirism.village.othertotem": "This totem doesn’t work. Search for another one",
   "__comment": "container/tileentity/screen",
   "tile.vampirism.blood_grinder": "Blood Grinder",
@@ -477,9 +482,12 @@
   "block.vampirism.blood_pedestal": "Blood Pedestal",
   "block.vampirism.blood_grinder": "Blood Grinder",
   "block.vampirism.blood_sieve": "Blood Sieve",
-  "block.vampirism.totem_top": "Village totem top",
-  "block.vampirism.totem_top_vampirism_hunter": "Village totem top",
-  "block.vampirism.totem_top_vampirism_vampire": "Village totem top",
+  "block.vampirism.totem_top": "Fragile village totem top",
+  "block.vampirism.totem_top_vampirism_hunter": "Fragile village totem top",
+  "block.vampirism.totem_top_vampirism_vampire": "Fragile village totem top",
+  "block.vampirism.totem_top_crafted": "Village totem top",
+  "block.vampirism.totem_top_vampirism_hunter_crafted": "Village totem top",
+  "block.vampirism.totem_top_vampirism_vampire_crafted": "Village totem top",
   "block.vampirism.totem_base": "Village totem base",
   "block.vampirism.castle_slab_dark_brick": "Dark Brick Slab",
   "block.vampirism.castle_slab_purple_brick": "Purple Brick Slab",
