Add minion stats and leveling (#761)
* Add minion stats screen and start with hunter implementation

* Make generics a whole lot more complicated

Make sure hunter minion levels have an effect

* Add shift-transfer to minion inventory

* Add vampire minion levels

* Add upgrade items and tasks

* add back buttons for the minion screens

* Update src/main/java/de/teamlapen/vampirism/client/gui/HunterMinionStatsScreen.java

Co-authored-by: Paul Becker <dev@paube.de>

* Update src/main/java/de/teamlapen/vampirism/client/gui/MinionStatsScreen.java

Co-authored-by: Paul Becker <dev@paube.de>

* Update src/main/java/de/teamlapen/vampirism/entity/minion/VampireMinionEntity.java

Co-authored-by: Paul Becker <dev@paube.de>

* Apply suggestions.
Make sure you can only use the correct faction upgrade item

* Fix missing List clear

* Move from 6 down to 3 upgrade items

* Fixes

Co-authored-by: cheaterpaul <dev@paube.de>

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -104,6 +104,7 @@
   "gui.vampirism.taskmaster.text.vampirism_vampire": "Sire, if you are willing to help the local vampire community, there are several tasks you can complete. You will be rewarded upon completion and make yourself a name. Please browse the available task and accept any you like",
   "gui.vampirism.taskmaster.text.vampirism_hunter": "Fellow hunter,\nto support the local hunter community, there are several tasks you can complete. You will be rewarded upon completion. Please browse the available tasks and accept any you like.",
   "gui.vampirism.taskmaster.not_accepted": "Not accepted yet",
+  "gui.vampirism.minion_stats": "Minion Stats",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
@@ -137,6 +138,8 @@
   "text.vampirism.hunter": "Hunter",
   "text.vampirism.hunters": "Hunter",
   "text.vampirism.level": "Level",
+  "text.vampirism.for_up_to_level": "For up to level",
+  "text.vampirism.for_to_levels": "For levels %s to %s",
   "text.vampirism.level_short": "Lvl",
   "text.vampirism.lord": "Lord",
   "text.vampirism.title": "Title",
@@ -247,8 +250,10 @@
   "text.vampirism.trainer_disabled_hunter": "It is not safe enough to train you here. Please free the village.",
   "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
   "text.vampirism.hunter.cured_sanguinare": "You have come to the right person. I have cured you of sanguinare",
-  "text.vampirism.hunter_minion.equipment_upgrade": "Thank you for the upgraded equipement. I can now carry more items and am stronger.",
-  "text.vampirism.hunter_minion.equipment_wrong": "I already have this equipment",
+  "text.vampirism.hunter_minion.equipment_upgrade": "Thank you for the upgraded equipment. Please choose in which area I should train.",
+  "text.vampirism.hunter_minion.equipment_wrong": "I can't use this upgrade",
+  "text.vampirism.vampire_minion.binding_upgrade": "I am grateful for the upgrade, I shall serve you even better now Sire. Please choose in which area I should improve",
+  "text.vampirism.vampire_minion.binding_wrong": "This upgrade is of no help for me",
   "text.vampirism.taskmaster.no_tasks": "No tasks available at the moment",
   "text.vampirism.taskmaster.no_tasks_unique": "There are no task left",
   "__comment": "task_entity_tags",
@@ -571,6 +576,7 @@
   "item.vampirism.impure_blood_bucket": "Impure Blood Bucket",
   "item.vampirism.garlic_bread": "Garlic Bread",
   "item.vampirism.umbrella": "Umbrella",
+  "item.vampirism.minion_upgrade_item.desc": "One levelup",
   "__comment": "item_old",
   "item.vampirism.vampires_fear": "Vampire’s fear",
   "item.vampirism.torch": "Torch",
@@ -620,15 +626,16 @@
   "item.vampirism.item.tier.ultimate": "Ultimate",
   "item.vampirism.item_alchemical_fire.desc1": "Does not spread",
   "item.vampirism.item_alchemical_fire.desc2": "Burns indefinitely",
-  "item.vampirism.hunter_intel.for_level": "for Level",
   "item.vampirism.pure_blood.purity": "Purity",
   "item.vampirism.hunter_minion_equipment": "Equipment for hunter minion",
-  "item.vampirism.hunter_minion_upgrade1": "Hunter-minion equipment upgrade",
-  "item.vampirism.hunter_minion_upgrade2": "Improved hunter-minion equipment upgrade",
+  "item.vampirism.hunter_minion_upgrade_simple": "Hunter minion equipment upgrade",
+  "item.vampirism.hunter_minion_upgrade_enhanced": "Enhanced Hunter minion equipment upgrade",
+  "item.vampirism.hunter_minion_upgrade_special": "Special Hunter minion equipment upgrade",
   "item.vampirism.feeding_adapter": "Feeding adapter",
   "item.vampirism.vampire_minion_binding": "Vampire minion binding",
-  "item.vampirism.vampire_minion_upgrade1": "Vampire minion upgrade",
-  "item.vampirism.vampire_minion_upgrade2": "Improved vampire minion upgrade",
+  "item.vampirism.vampire_minion_upgrade_simple": "Vampire minion upgrade",
+  "item.vampirism.vampire_minion_upgrade_enhanced": "Enhanced Vampire minion upgrade",
+  "item.vampirism.vampire_minion_upgrade_special": "Special Vampire minion upgrade",
   "block.vampirism.castle_block.no_spawn": "No entity can spawn on this",
   "block.vampirism.castle_block.vampire_spawn": "Only vampires can spawn on this",
   "block.vampirism.sunscreen_beacon.tooltip1": "Creative only.",
@@ -754,8 +761,9 @@
   "__comment": "tasks",
   "task.vampirism.feeding_adapter": "Kitchen utility",
   "task.vampirism.vampire_minion_binding": "Minion control",
-  "task.vampirism.vampire_minion_upgrade1": "Minion upgrade",
-  "task.vampirism.vampire_minion_upgrade2": "Minion enhanced upgrade",
+  "task.vampirism.vampire_minion_upgrade_simple": "Minion upgrade",
+  "task.vampirism.vampire_minion_upgrade_enhanced": "Performance enhancer",
+  "task.vampirism.vampire_minion_upgrade_special": "The ultimate boost",
   "task.vampirism.vampire_lord1": "Are you worthy?",
   "task.vampirism.vampire_lord1.reward": "Become a vampire lord",
   "task.vampirism.vampire_lord2": "The next step",
@@ -767,8 +775,9 @@
   "task.vampirism.vampire_lord5": "Megalomania",
   "task.vampirism.vampire_lord5.reward": "Lord Level 5",
   "task.vampirism.hunter_minion_equipment": "Proper equipment",
-  "task.vampirism.hunter_minion_upgrade1": "An upgrade",
-  "task.vampirism.hunter_minion_upgrade2": "Top-notch equipment",
+  "task.vampirism.hunter_minion_upgrade_simple": "An upgrade",
+  "task.vampirism.hunter_minion_upgrade_enhanced": "A better upgrade",
+  "task.vampirism.hunter_minion_upgrade_special": "Top-notch equipment",
   "task.vampirism.hunter_lord1": "Are you worthy?",
   "task.vampirism.hunter_lord1.reward": "Become a hunter lord",
   "task.vampirism.hunter_lord2": "The next step",
@@ -783,7 +792,7 @@
   "task.vampirism.fire_resistance2": "Upgraded resistance",
   "task.vampirism.v_infect1": "Sanguinare spreader I",
   "task.vampirism.v_infect2": "Sanguinare spreader II",
-  "task.vampirism.v_infect3": "Sanguinare spreeader III",
+  "task.vampirism.v_infect3": "Sanguinare spreader III",
   "task.vampirism.v_capture1": "Extending territory I",
   "task.vampirism.v_capture2": "Extending territory II",
   "task.vampirism.v_kill1": "Hunter hunting I",
@@ -819,5 +828,7 @@
   "text.vampirism.lord_title.hunter.2": "Captain",
   "text.vampirism.lord_title.hunter.3": "Major",
   "text.vampirism.lord_title.hunter.4": "Colonel",
-  "text.vampirism.lord_title.hunter.5": "Brigadier"
+  "text.vampirism.lord_title.hunter.5": "Brigadier",
+  "text.vampirism.minion.stats.inventory_level": "Inventory Size",
+  "text.vampirism.minion.stats.resource_level": "Resource Efficiency"
 }
