- Fix hunter name - Fix hunter trainer texture - Fix advanced hunter cloak - Fix faction representative model - Adjust totem hardness

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -728,6 +728,7 @@
   "entity.vampirism.advanced_hunter": "Advanced Hunter",
   "entity.vampirism.villager_angry": "Angry Villager",
   "entity.vampirism.vampire_hunter": "Vampire Hunter",
+  "entity.vampirism.hunter": "Vampire Hunter",
   "entity.vampirism.vampire": "Vampire",
   "entity.vampirism.blinding_bat": "Bat",
   "entity.vampirism.dracula": "Dracula",
